adjusted styling to work correctly on smaller screens

--- a/src/app/index.css
+++ b/src/app/index.css
@@ -42,8 +42,8 @@ div.page-head-logo-div {
 }
 
 div.page-head-menu-div {
-  @apply flex items-center justify-end flex-col sm:flex-row;
-  @apply w-full sm:w-[80%] h-10;
+  @apply flex items-center justify-center sm:justify-end flex-col sm:flex-row;
+  @apply sm:w-[80%] h-full sm:h-10;
   @apply animate-menu-drop-down;
 }
 
@@ -60,7 +60,7 @@ span.page-head-logo-text {
 }
 
 section#logout-section {
-  @apply ml-3;
+  @apply sm:ml-3 mt-0.5 sm:mt-0;
 }
 
 section#logout-section form.logout-form {
